recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:39: error: expected start of definition
	override def run() {
                 ^SquareKoch:42: error: Unmatched closing brace '}' ignored here
}
^